feat!: only track total bhop and perf count for bhop stats
